--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -64,7 +64,24 @@
       <div class="text-left">
         <h2>New Cases!</h2>
         <table class="table table-striped table-responsive-md btn-table"></table>
+<TABLE BORDER="0">
+<TR>
 
+<TD><FORM METHOD="LINK" ACTION="index.html">
+<INPUT TYPE="submit" VALUE="HTML Goodies Domain Page">
+</FORM></TD>
+
+<TD><FORM METHOD="LINK" ACTION="http://espn.go.com">
+<INPUT TYPE="submit" VALUE="ESPN">
+</FORM></TD>
+
+<TD><FORM METHOD="LINK" ACTION="http://www.cnn.com">
+<INPUT TYPE="submit" VALUE="CNN News">
+</FORM></TD>
+
+</TR>
+
+</TABLE>
 <thead>
   <tr>
     <th>#</th>
@@ -79,6 +96,7 @@
     <th scope="row">1</th>
     <td>
       <button type="button" class="btn btn-indigo btn-sm m-0">Button</button>
+      <li role="presentation"><a href="index.html">Home</a></li>
     </td>
     <td>Otto</td>
     <td>@mdo</td>
