--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -67,59 +67,43 @@
 <TABLE BORDER="0">
 <TR>
 
-<TD><FORM METHOD="LINK" ACTION="index.html">
-<INPUT TYPE="submit" VALUE="HTML Goodies Domain Page">
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<INPUT TYPE="submit" VALUE="Thompson v. Innovative Pharmaceuticals">
 </FORM></TD>
 
-<TD><FORM METHOD="LINK" ACTION="http://espn.go.com">
-<INPUT TYPE="submit" VALUE="ESPN">
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<INPUT TYPE="submit" VALUE="Breach of Contract">
 </FORM></TD>
 
-<TD><FORM METHOD="LINK" ACTION="http://www.cnn.com">
-<INPUT TYPE="submit" VALUE="CNN News">
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<INPUT TYPE="submit" VALUE="$1.5m">
+</FORM></TD>
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<INPUT TYPE="submit" VALUE="Discovery">
+</FORM></TD>
+
+</TR>
+<TR>
+
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<INPUT TYPE="submit" VALUE="Thompson v. Innovative Pharmaceuticals">
+</FORM></TD>
+
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<INPUT TYPE="submit" VALUE="Breach of Contract">
+</FORM></TD>
+
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<INPUT TYPE="submit" VALUE="$1.5m">
+</FORM></TD>
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<INPUT TYPE="submit" VALUE="Discovery">
 </FORM></TD>
 
 </TR>
 
 </TABLE>
-<thead>
-  <tr>
-    <th>#</th>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Username</th>
-  </tr>
-</thead>
 
-<tbody>
-  <tr>
-    <th scope="row">1</th>
-    <td>
-      <button type="button" class="btn btn-indigo btn-sm m-0">Button</button>
-      <li role="presentation"><a href="index.html">Home</a></li>
-    </td>
-    <td>Otto</td>
-    <td>@mdo</td>
-  </tr>
-  <tr>
-    <th scope="row">2</th>
-    <td>Jacob</td>
-    <td>
-      <button type="button" class="btn btn-indigo btn-sm m-0">Button</button>
-    </td>
-    <td>@fat</td>
-  </tr>
-  <tr>
-    <th scope="row">3</th>
-    <td>Larry</td>
-    <td>the Bird</td>
-    <td>
-      <button type="button" class="btn btn-indigo btn-sm m-0">Button</button>
-    </td>
-  </tr>
-</tbody>
-
-</table>
         <div class="col-md-10 col-md-offset-1">
           <p>We specialize in making your law firm or in house organization more efficient. Using data analytics and variety of process improvement tools, we will make your operation cost less and do more. We use six sigma, lean, and a variety of statistical control methods to make sure that you maximize your time doing legal work. We remove waste and make sure your communication flow is streamlined.
         </p>
@@ -131,11 +115,6 @@
       </br>
       <br>
       </br>
-  <div>
-    <div class="col-md-14 col-md-offset-1">
-          <h3>We are so confident in our abilities that we offer the first hour of consulting for free. Email jboyarsky@rgbconsultinggroup.com to set up your free hour!
-        </h3>
-        </div>
         <br>
       </br>
       <br>
