--- a/case1docs.html
+++ b/case1docs.html
@@ -71,45 +71,26 @@
 			</br>
 			<br>
 		</br>
-		<TABLE BORDER="0">
-<TR>
+			<div class="about">
+		<div class="container">
+			<div class="text-left">
+				<h2>Download court documents</h2>
+				<div class="col-md-20 col-md-offset-1">
+					
+				</div>
+				<br>
+			</br>
+			<br>
+		</br>
+		<div>
+		<div class="w3-content" style="max-width:2000px; max-height:1000px">
 
-<TD><TD BGCOLOR="#000000"><FORM METHOD="LINK" ACTION="case1docs.html">
-<INPUT TYPE="submit" VALUE="Court Documents">
-</FORM></TD>
+    <!-- Automatic Slideshow Images -->
+    <!-- <div class=""w3-display-container w3-center"">  -->
 
-<TD><FORM METHOD="LINK" ACTION="case1docs.html">
-<INPUT TYPE="submit" VALUE="Court Documents">
-</FORM></TD>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="$1.5m">
-</FORM></TD>
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Discovery">
-</FORM></TD>
-
-</TR>
-<TR>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Thompson v. Innovative Pharmaceuticals">
-</FORM></TD>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Breach of Contract">
-</FORM></TD>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="$1.5m">
-</FORM></TD>
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Discovery">
-</FORM></TD>
-
-</TR>
-
-</TABLE>
+        <img src="legaldocument.jpg" style="width:100%">
+    	</div>
+	</div>
 				
 			</div>	
 		</div>			
