--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -67,7 +67,7 @@
 <TABLE BORDER="0">
 <TR>
 
-<TD><TD BGCOLOR="#000000"><FORM METHOD="LINK" ACTION="case1.html">
+<TD BGCOLOR="#000000"><FORM METHOD="LINK" ACTION="case1.html">
 <INPUT TYPE="submit" VALUE="Thompson v. Innovative Pharmaceuticals">
 </FORM></TD>
 
