--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -64,10 +64,10 @@
       <div class="text-left">
         <h2>New Cases!</h2>
         <table class="table table-striped table-responsive-md btn-table"></table>
-<TABLE BORDER="0">
+<TABLE BORDER="0" COLOR="#000000">
 <TR>
 
-<TD BGCOLOR="#000000"><FORM METHOD="LINK" ACTION="case1.html">
+<TD><FORM METHOD="LINK" ACTION="case1.html">
 <INPUT TYPE="submit" VALUE="Thompson v. Innovative Pharmaceuticals">
 </FORM></TD>
 
@@ -90,14 +90,14 @@
 </FORM></TD>
 
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Breach of Contract">
+<INPUT TYPE="submit" COLOR="#000000" VALUE="Breach of Contract">
 </FORM></TD>
 
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="$1.5m">
+<BG COLOR="#000000"><INPUT TYPE="submit" VALUE="$1.5m">
 </FORM></TD>
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Discovery">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Discovery">
 </FORM></TD>
 
 </TR>
