--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -78,26 +78,32 @@
 <TD><FORM METHOD="LINK" ACTION="case1.html">
 <INPUT TYPE="submit" VALUE="$1.5m">
 </FORM></TD>
+
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Discovery">
-</FORM></TD>
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Discovery">
+
+
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="IP/Trade Secret">
+
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="SDNY">
 
 </TR>
 <TR>
 
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Thompson v. Innovative Pharmaceuticals">
+<INPUT TYPE="submit" VALUE="Ryans v. Photon Push LLC">
 </FORM></TD>
 
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" COLOR="#000000" VALUE="Breach of Contract">
-</FORM></TD>
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="IP/Trade Secret">
 
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<BG COLOR="#000000"><INPUT TYPE="submit" VALUE="$1.5m">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="$5.0m">
 </FORM></TD>
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Discovery">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Complaint Recently Filed">
 </FORM></TD>
 
 </TR>
