--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -68,19 +68,19 @@
 <TR>
 
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Thompson v. Innovative Pharmaceuticals">
-</FORM></TD>
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Thompson v. InnoPharm LLC">
+
 
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Breach of Contract">
-</FORM></TD>
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Breach of Contract">
+
 
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="$1.5m">
-</FORM></TD>
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="$1.5m">
+
 
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Discovery">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Start of Discovery">
 
 
 <TD><FORM METHOD="LINK" ACTION="case1.html">
@@ -102,18 +102,38 @@
 <TD><FORM METHOD="LINK" ACTION="case1.html">
 <FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="$5.0m">
 </FORM></TD>
+
 <TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Complaint Recently Filed">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Complaint Just Filed">
 </FORM></TD>
 
 </TR>
+<TR>
 
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Thompson v. InnoPharm LLC">
+
+
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Breach of Contract">
+
+
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="$1.5m">
+
+
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Discovery">
+
+
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="IP/Trade Secret">
+
+<TD><FORM METHOD="LINK" ACTION="case1.html">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="SDNY">
+
+</TR>
 </TABLE>
-
-        <div class="col-md-10 col-md-offset-1">
-          <p>We specialize in making your law firm or in house organization more efficient. Using data analytics and variety of process improvement tools, we will make your operation cost less and do more. We use six sigma, lean, and a variety of statistical control methods to make sure that you maximize your time doing legal work. We remove waste and make sure your communication flow is streamlined.
-        </p>
-        </div>
     <br>
   </br>
   </br>
