--- a/case1.html
+++ b/case1.html
@@ -63,7 +63,7 @@
 	<div class="about">
 		<div class="container">
 			<div class="text-left">
-				<h2>Thompson v. Innovative Pharmaceuticals</h2>
+				<h2>Thompson v. InnoPharm LLC</h2>
 				<div class="col-md-20 col-md-offset-1">
 					
 				</div>
@@ -71,41 +71,14 @@
 			</br>
 			<br>
 		</br>
-		<TABLE BORDER="0">
+		<TABLE BORDER="0" COLOR="#000000">
 <TR>
 
-<TD><TD BGCOLOR="#000000"><FORM METHOD="LINK" ACTION="case1docs.html">
-<INPUT TYPE="submit" VALUE="Court Documents">
-</FORM></TD>
 
 <TD><FORM METHOD="LINK" ACTION="case1docs.html">
-<INPUT TYPE="submit" VALUE="Court Documents">
+<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Court Documents">
 </FORM></TD>
 
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="$1.5m">
-</FORM></TD>
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Discovery">
-</FORM></TD>
-
-</TR>
-<TR>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Thompson v. Innovative Pharmaceuticals">
-</FORM></TD>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Breach of Contract">
-</FORM></TD>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="$1.5m">
-</FORM></TD>
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Discovery">
-</FORM></TD>
 
 </TR>
 
