--- a/case1docs.html
+++ b/case1docs.html
@@ -88,7 +88,7 @@
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
 
-        <img src="legaldocument.jpg" style="width:100%">
+        <img src="legaldocument.JPG" style="width:100%">
     	</div>
 	</div>
 				
