--- a/services.html
+++ b/services.html
@@ -57,6 +57,7 @@
 							<li role="presentation"><a href="index.html#mission">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Business Services</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
+							<li role="presentation"><a href="gallery.html">Cases</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
 					</div>
