--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
                         <span class="icon-bar"></span>
                     </button>
                    <div class="navbar-brand">
-                        <a href="index.html"><h1>RGB Consulting Group</h1></a>
+                        <a href="index.html"><h1>Ailanthus</h1></a>
                     </div>
                 </div>              
                 <div class="navbar-collapse collapse">                          
@@ -67,7 +67,7 @@
 <TABLE BORDER="0" COLOR="#000000">
 <TR>
 
-  <div class="w3-content" style="max-width:2000px; max-height:1000px">
+  <div class="w3-content" style="max-width:300px; max-height:600px">
 
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
@@ -100,7 +100,7 @@
 </TR>
 <br>
 </br>
-  <div class="w3-content" style="max-width:2000px; max-height:1000px">
+  <div class="w3-content" style="max-width:300px; max-height:600px">
 
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
@@ -151,7 +151,7 @@
 
 </TR>
 </TABLE>
-  <div class="w3-content" style="max-width:2000px; max-height:1000px">
+  <div class="w3-content" style="max-width:400px; max-height:800px">
 
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
