--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -41,7 +41,7 @@
                         <span class="icon-bar"></span>
                     </button>
                    <div class="navbar-brand">
-						<a href="index.html"><h1>RGB Consulting Group</h1></a>
+						<a href="index.html"><h1>Ailanthus</h1></a>
 					</div>
                 </div>				
                 <div class="navbar-collapse collapse">							
@@ -66,7 +66,15 @@
         <table class="table table-striped table-responsive-md btn-table"></table>
 <TABLE BORDER="0" COLOR="#000000">
 <TR>
+<div>
+    <div class="w3-content" style="max-width:500px; max-height:1000px">
 
+    <!-- Automatic Slideshow Images -->
+    <!-- <div class=""w3-display-container w3-center"">  -->
+
+        <img src="legaldocument.JPG" style="width:100%">
+      </div>
+  </div>
 <TD><FORM METHOD="LINK" ACTION="case1.html">
 <FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Thompson v. InnoPharm LLC">
 
@@ -137,6 +145,15 @@
     <br>
   </br>
   </br>
+  <div>
+    <div class="w3-content" style="max-width:500px; max-height:1000px">
+
+    <!-- Automatic Slideshow Images -->
+    <!-- <div class=""w3-display-container w3-center"">  -->
+
+        <img src="legaldocument.JPG" style="width:100%">
+      </div>
+  </div>
       <br>
       </br>
       <br>
