--- a/about.html
+++ b/about.html
@@ -65,9 +65,8 @@
 			<div class="text-center">
 				<h2>Our Story</h2>
 				<div class="col-md-10 col-md-offset-1">
-					<p>RGB Consulting Group is an engineering and business insight consulting firm concentrated on increasing effectiveness and process improvement through a variety methods. Our initiative is focused on delivering quantifiable solutions for clients which enable superior quality standards for business development and operations. The Group focuses on analytics and results-based projects in order to ensure actionable solutions are developed.
+					<p>Ailanthus is a litigation investing broker that finds cases for you to invest in. Often times litigation lasts a long time and costs a lot of money. We provide an opportunity for people to invest so that law firms don't take there normally high contingency fee. In return for paying for litigation, investors received a high ROI, and the plaintiff takes home more money.
 						<br><br></br></br>
-					RGB Consulting Group is a young initiative focused on delivering quantifiable solutions for clients which enable superior quality standards for business development and operations. The Group focuses on analytics and results-based projects in order to ensure proper installment of solutions which adapt to a wide range of industries in North America, focusing on the northeast, and Latin America, focusing on Costa Rica.</p>
 				</div>
 				<br>
 			</br>
