--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Ailanthus</title>
+    <title>RGB Consulting Group</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link href="css/animate.min.css" rel="stylesheet"> 
-	<link href="css/style.css" rel="stylesheet" />	
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link href="css/animate.min.css" rel="stylesheet"> 
+  <link href="css/style.css" rel="stylesheet" />  
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -29,8 +29,8 @@
   gtag('config', 'UA-123150229-1');
 </script>
   </head>
-  <body>	
-	<header id="header">
+  <body>  
+  <header id="header">
         <nav class="navbar navbar-default navbar-static-top" role="banner">
             <div class="container">
                 <div class="navbar-header">
@@ -41,166 +41,111 @@
                         <span class="icon-bar"></span>
                     </button>
                    <div class="navbar-brand">
-						<a href="index.html"><h1>Ailanthus</h1></a>
-					</div>
-                </div>				
-                <div class="navbar-collapse collapse">							
-					<div class="menu">
-						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation"><a href="index.html">Home</a></li>
-              <li role="presentation"><a href="litigationinvesting.html">Litigation Investing</a></li>
-							<li role="presentation"><a href="index.html#mission">Mission Statement</a></li>
-							<li role="presentation"><a href="services.html">Business Services</a></li>
-							<li role="presentation"><a href="about.html">About Us</a></li>
-            	<li role="presentation"><a href="contact.html">Contact</a></li>						
-						</ul>
-					</div>
-				</div>		
+            <a href="index.html"><h1>Ailanthus</h1></a>
+          </div>
+                </div>        
+                <div class="navbar-collapse collapse">              
+          <div class="menu">
+            <ul class="nav nav-tabs" role="tablist">
+              <li role="presentation"><a href="index.html">Home</a></li>
+                     <li role="presentation"><a href="litigationinvesting.html">Litigation Investing</a></li>
+              <li role="presentation"><a href="#mission">Mission Statement</a></li>
+              <li role="presentation"><a href="services.html">Business Services</a></li>
+              <li role="presentation"><a href="about.html">About Us</a></li>
+              <li role="presentation"><a href="gallery.html">Cases</a></li>
+              <li role="presentation"><a href="contact.html">Contact</a></li>           
+            </ul>
+          </div>
+        </div>    
             </div><!--/.container-->
-        </nav><!--/nav-->		
-    </header><!--/header-->	
-    <div id="litigationinvesting">
-    <div class="container">
-      <div class="text-left">
-        <h2>New Cases!</h2>
-        <table class="table table-striped table-responsive-md btn-table"></table>
-<TABLE BORDER="0" COLOR="#000000">
-<TR>
-<div>
-    <div class="w3-content" style="max-width:500px; max-height:1000px">
+        </nav><!--/nav-->   
+    </header><!--/header--> 
+  <!-- Page Content -->
+  <div class="container">
 
-    <!-- Automatic Slideshow Images -->
-    <!-- <div class=""w3-display-container w3-center"">  -->
+    <!-- Jumbotron Header -->
+    <header class="jumbotron my-4">
+      <h1 class="display-3">Ailanthus</h1>
+      <p class="lead">We scan thousands of cases every day to find the best investment opportunities.</p>
+      <a href="about.html" class="btn btn-primary btn-lg">Find out more about our who we are.</a>
+    </header>
 
-        <img src="legaldocument.JPG" style="width:100%">
-      </div>
-  </div>
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Thompson v. InnoPharm LLC">
+    <!-- Page Features -->
+    <div class="row text-center">
 
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Breach of Contract">
-
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="$1.5m">
-
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Start of Discovery">
-
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="IP/Trade Secret">
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="SDNY">
-
-</TR>
-<TR>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<INPUT TYPE="submit" VALUE="Ryans v. Photon Push LLC">
-</FORM></TD>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="IP/Trade Secret">
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="$5.0m">
-</FORM></TD>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Complaint Just Filed">
-</FORM></TD>
-
-</TR>
-<TR>
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Thompson v. InnoPharm LLC">
-
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Breach of Contract">
-
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="$1.5m">
-
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Discovery">
-
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="IP/Trade Secret">
-
-<TD><FORM METHOD="LINK" ACTION="case1.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="SDNY">
-
-</TR>
-</TABLE>
-    <br>
-  </br>
-  </br>
-  <div>
-    <div class="w3-content" style="max-width:500px; max-height:1000px">
-
-    <!-- Automatic Slideshow Images -->
-    <!-- <div class=""w3-display-container w3-center"">  -->
-
-        <img src="legaldocument.JPG" style="width:100%">
-      </div>
-  </div>
-      <br>
-      </br>
-      <br>
-      </br>
-        <br>
-      </br>
-      <br>
-      </br>
-
-<div class="sub-footer">
-    <div class="container">
-      <div class="social-icon">
-        <div class="col-md-4">
-          <ul class="social-network">
-            <li><a href="#" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="#" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
-          </ul> 
+      <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card h-100">
+          <img class="card-img-top" src="legaldocument.JPG" style="width:100%">
+          <div class="card-body">
+            <h4 class="card-title">McClatcher v. Robins</h4>
+            <p class="card-text">An IP/Trade Secret case with $2.4M in damages. This case is expected to take roughly 3-6 months and the expected return is 1.5X</p>
+          </div>
+          <div class="card-footer">
+            <a href="case1.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+           <div class="card-footer">
+            <a href="case1docs.html" class="btn btn-primary">Download Court Documents</a>
+          </div>
         </div>
       </div>
-      
-      <div class="col-md-2 col-md-offset-2">
-        <div class="copyright">
-          &copy; Day 2015 by <a target="_blank" href="http://bootstraptaste.com/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Bootstrap Themes</a>. All Rights Reserved.
+
+      <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card h-100">
+          <img class="card-img-top" src="legaldocument.JPG" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary">Find Out More!</a>
+          </div>
         </div>
-                <!-- 
-                    All links in the footer should remain intact. 
-                    Licenseing information is available at: http://bootstraptaste.com/license/
-                    You can buy this theme without footer links online at: http://bootstraptaste.com/buy/?theme=Day
-                -->
-      </div>            
-    </div>        
+      </div>
+
+      <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card h-100">
+          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card h-100">
+          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary">Find Out More!</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- /.row -->
+
   </div>
-  
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery.js"></script>    
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script> 
-  <script src="js/wow.min.js"></script>
-  <script>
-  wow = new WOW(
-   {
-  
-    } ) 
-    .init();
-  </script> 
-  </body>
+  <!-- /.container -->
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
 </html>
