--- a/case2.html
+++ b/case2.html
@@ -64,22 +64,12 @@
 	<div class="about">
 		<div class="container">
 			<div class="text-left">
-				<h2>McClatcher v. Robins</h2>
+				<h2>Thompson v. Reuters LLC</h2>
 				<div class="col-md-20 col-md-offset-1">
 					
 				</div>
 				<br>
 			</br>
-			<div>
-		<div class="w3-content" style="max-width:2000px; max-height:1000px">
-
-    <!-- Automatic Slideshow Images -->
-    <!-- <div class=""w3-display-container w3-center"">  -->
-
-        <img src="mcclatcher.jpg" style="width:100%">
-    	</div>
-	</div>
-
 			<br>
 		</br>
 		<TABLE BORDER="0" COLOR="#000000">
