--- a/case2docs.html
+++ b/case2docs.html
@@ -70,30 +70,28 @@
 				</div>
 				<br>
 			</br>
-			<div>
-		<div class="w3-content" style="max-width:2000px; max-height:1000px">
+			<br>
+		</br>
+			<div class="about">
+		<div class="container">
+			<div class="text-left">
+				<h2>Download court documents</h2>
+				<div class="col-md-20 col-md-offset-1">
+					
+				</div>
+				<br>
+			</br>
+			<br>
+		</br>
+		<div>
+		<div class="w3-content" style="max-width:500px; max-height:1000px">
 
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
 
-        <img src="mcclatcher.jpg" style="width:100%">
+        <img src="legaldocument.JPG" style="width:100%">
     	</div>
 	</div>
-
-			<br>
-		</br>
-		<TABLE BORDER="0" COLOR="#000000">
-<TR>
-
-
-<TD><FORM METHOD="LINK" ACTION="case1docs.html">
-<FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Court Documents">
-</FORM></TD>
-
-
-</TR>
-
-</TABLE>
 				
 			</div>	
 		</div>			
@@ -289,9 +287,7 @@
 				<h4>Contact Us</h4>					
 				<div class="contact-info">
 					<ul>
-						<li><i class="fa fa-home fa"></i>Boston, MA | San Jose, Costa Rica</li>
-						<li><i class="fa fa-phone fa"></i> +1 617 470 7125</li>
-						<li><i class="fa fa-envelope fa"></i> rrojas@rgbconsultinggroup.com</li>
+						<li><i class="fa fa-home fa"></i>Boston, MA | San Fransisco</li>
 					</ul>
 				</div>
 			</div>
