--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -65,7 +65,7 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3">Ailanthus</h1>
+      <h1 class="display-3"><FONT COLOR="#000000">Ailanthus</h1>
       <p class="lead">We scan thousands of cases every day to find the best investment opportunities.</p>
       <a href="about.html" class="btn btn-primary btn-lg">Find out more about our who we are.</a>
     </header>
@@ -91,26 +91,48 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="legaldocument.JPG" alt="">
+          <img class="card-img-top" src="legaldocument.JPG" style="width:100%">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+            <h4 class="card-title">McClatcher v. Robins</h4>
+            <p class="card-text">An IP/Trade Secret case with $2.4M in damages. This case is expected to take roughly 3-6 months and the expected return is 1.5X</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="case1.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+           <div class="card-footer">
+            <a href="case1docs.html" class="btn btn-primary">Download Court Documents</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="legaldocument.JPG" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <h4 class="card-title">Thompson v. Reuters LLC</h4>
+            <p class="card-text">A breach of contract case with $10.0M in damages. This case is expected to take roughly 6-12 months and the expected return is 2X plus 5% of damages.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="case2.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+           <div class="card-footer">
+            <a href="case2docs.html" class="btn btn-primary">Download Court Documents</a>
+          </div>
+        </div>
+      </div>
+
+     <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card h-100">
+          <img class="card-img-top" src="legaldocument.JPG" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Johnson v. RetroComp</h4>
+            <p class="card-text">An employment case with $3.7M in damages. This case is expected to take roughly 2-3 months and the expected return is 3X.</p>
+          </div>
+          <div class="card-footer">
+            <a href="case3.html" class="btn btn-primary">Find Out More!</a>
+          </div>
+           <div class="card-footer">
+            <a href="case3docs.html" class="btn btn-primary">Download Court Documents</a>
           </div>
         </div>
       </div>
