--- a/case1docs.html
+++ b/case1docs.html
@@ -64,7 +64,7 @@
 	<div class="about">
 		<div class="container">
 			<div class="text-left">
-				<h2>Thompson v. Innovative Pharmaceuticals</h2>
+				<h2>McClatcher v. Robins</h2>
 				<div class="col-md-20 col-md-offset-1">
 					
 				</div>
