--- a/case2.html
+++ b/case2.html
@@ -70,13 +70,22 @@
 				</div>
 				<br>
 			</br>
+			<div>
+		<div class="w3-content" style="max-width:2000px; max-height:1000px">
+
+    <!-- Automatic Slideshow Images -->
+    <!-- <div class=""w3-display-container w3-center"">  -->
+
+        <img src="thompson.jpg" style="width:100%">
+    	</div>
+	</div>
 			<br>
 		</br>
 		<TABLE BORDER="0" COLOR="#000000">
 <TR>
 
 
-<TD><FORM METHOD="LINK" ACTION="case1docs.html">
+<TD><FORM METHOD="LINK" ACTION="case2docs.html">
 <FONT COLOR="#000000"><INPUT TYPE="submit" VALUE="Court Documents">
 </FORM></TD>
 
