--- a/case3docs.html
+++ b/case3docs.html
@@ -64,7 +64,7 @@
 	<div class="about">
 		<div class="container">
 			<div class="text-left">
-				<h2>Thompson v. Reuters LLC</h2>
+				<h2>Johnson v. RetroComp</h2>
 				<div class="col-md-20 col-md-offset-1">
 					
 				</div>
