--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -107,7 +107,7 @@
 
      <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="legaldocument.JPG" alt="">
+          <img class="card-img-top" src="legaldocument.JPG" style="width:100%">
           <div class="card-body">
             <h4 class="card-title">Johnson v. RetroComp</h4>
             <p class="card-text">An employment case with $3.7M in damages. This case is expected to take roughly 2-3 months and the expected return is 3X.</p>
