--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -71,6 +71,9 @@
     </header>
 
     <!-- Page Features -->
+     <header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">Cases that need investment.</h1>
+      </header>
     <div class="row text-center">
 
       <div class="col-lg-3 col-md-6 mb-4">
