--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -70,11 +70,15 @@
       <a href="about.html" class="btn btn-primary btn-lg">Find out more about our who we are.</a>
     </header>
 
-    <!-- Page Features -->
-     <header class="jumbotron my-4">
-      <h1 class="display-3"><FONT COLOR="#000000">Cases that need investment.</h1>
-      </header>
-    <div class="row text-center">
+  <div id="mission">
+    <div class="container">
+      <div class="text-left">
+        <h2>Cases that need investment.</h2>
+      </div>
+    </div>
+  </div>
+
+   <h4 class="card-title">McClatcher v. Robins</h4>
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
