--- a/litigationinvesting.html
+++ b/litigationinvesting.html
@@ -96,6 +96,8 @@
         </div>
       </div>
 
+   <h4 class="card-title">Thompson v. Reuters LLC</h4>
+
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
           <img class="card-img-top" src="legaldocument.JPG" style="width:100%">
@@ -111,6 +113,8 @@
           </div>
         </div>
       </div>
+
+   <h4 class="card-title">Johnson v. RetroComp</h4>
 
      <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
