--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Ailanthus</title>
+    <title>Codified</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -65,7 +65,24 @@
 			<div class="text-center">
 				<h2>Our Story</h2>
 				<div class="col-md-10 col-md-offset-1">
-					<p>Ailanthus is a litigation investing broker that finds cases for you to invest in. Often times litigation lasts a long time and costs a lot of money. We provide an opportunity for people to invest so that law firms don't take there normally high contingency fee. In return for paying for litigation, investors received a high ROI, and the plaintiff takes home more money.
+					<p>We believe that learning and applying the law should be a lot easier than it currently is. We have practice aids for lawyers, law students, and scholars who wish to better understand part of the law.
+						<br><br></br></br>
+				</div>
+				<br>
+			</br>
+			<br>
+		</br>
+		
+				
+			</div>	
+		</div>			
+	</div>
+	<div class="about">
+		<div class="container">
+			<div class="text-center">
+				<h2>Who We Are</h2>
+				<div class="col-md-10 col-md-offset-1">
+					<p>We are a group of lawyers, legal scholars, and computer scientists who build software to enable lawyers and educators. We combine the best legal thinkers with the best coders to facilitate legal practice and legal education.
 						<br><br></br></br>
 				</div>
 				<br>
