--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
 
-        <img src="roundtableart1.jpg" style="width:100%">
+        <img src="A9Roundtableart.jpg" style="width:100%">
     	</div>
 	</div>
 
@@ -152,9 +152,9 @@
 	<div id="mission">
 		<div class="container">
 			<div class="text-center">
-				<h2>Mission Statement </h2>
+				<h2>Securing your transaction </h2>
 				<div class="col-md-10 col-md-offset-1">
-					<p>Our mission is to provide our clients with innovative, insightful, and impactful services to address business needs. With integrity and efficiency at the forefront of our priorities, we promise to deliver a solution that makes a difference.
+					<p>Article 9 lays out specific rules for securing a transaction; whether you are a lender, a business, or just someone who wants to get a better rate on their personal loan, Article 9 can help you.
 				</p>
 				</div>
 		<br>
@@ -162,10 +162,10 @@
 	<br>
 </br>
 				<div class="col-md-6 col-sm-6 col-xs-6">
-					<div class="btn-gamp"><a href="services.html">Learn More</a></div>
+					<div class="btn-gamp"><a href="services.html">Classify Your Collateral</a></div>
 				</div>
 				<div class="col-md-6 col-sm-6 col-xs-6">
-					<div class="gamp-btn"><a href="contact.html">Contact Us</a></div>
+					<div class="gamp-btn"><a href="contact.html">Create Your Security Interest</a></div>
 				</div>
 				
 			</div>	
