--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<li role="presentation"><a href="index.html">Home</a></li>
              				 <li role="presentation"><a href="litigationinvesting.html">Litigation Investing</a></li>
 							<li role="presentation"><a href="#mission">Mission Statement</a></li>
-							<li role="presentation"><a href="services.html">Business Services</a></li>
+							<li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="gallery.html">Cases</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
@@ -162,10 +162,10 @@
 	<br>
 </br>
 				<div class="col-md-6 col-sm-6 col-xs-6">
-					<div class="btn-gamp"><a href="services.html">Classify Your Collateral</a></div>
+					<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div>
 				</div>
 				<div class="col-md-6 col-sm-6 col-xs-6">
-					<div class="gamp-btn"><a href="contact.html">Create Your Security Interest</a></div>
+					<div class="gamp-btn"><a href="createsi.html">Create Your Security Interest</a></div>
 				</div>
 				
 			</div>	
