--- a/classify.html
+++ b/classify.html
@@ -80,7 +80,6 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="legaldocument.JPG" style="width:100%">
           <div class="card-body">
             <h4 class="card-title">It's a physical thing that I can move.</h4>
             <p class="card-text">Can you touch it? Can you move it without causing serious damage? If you answered yes to either or both of these questions, your collateral probably falls into the category of Goods</p>
@@ -114,13 +113,12 @@
 
      <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="legaldocument.JPG" style="width:100%">
           <div class="card-body">
-            <h4 class="card-title">Johnson v. RetroComp</h4>
-            <p class="card-text">An employment case with $3.7M in damages. This case is expected to take roughly 2-3 months and the expected return is 3X.</p>
+            <h4 class="card-title">It's intanigble</h4>
+            <p class="card-text">It's not really something I can hold or move. It may be a right to a good or a right to a payment. It may be a software or intellectual property.</p>
           </div>
           <div class="card-footer">
-            <a href="case3.html" class="btn btn-primary">Find Out More!</a>
+            <a href="case3.html" class="btn btn-primary">That sounds like me. </a>
           </div>
            <div class="card-footer">
             <a href="case3docs.html" class="btn btn-primary">Download Court Documents</a>
