--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 	</br>
 	<br>
 </br>
-				<div class="col-md-6 col-sm-6 col-xs-6">
+				<div class="col-md-12 col-sm-12 col-xs-12">
 					<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div>
 				</div>
-				<div class="col-md-6 col-sm-6 col-xs-6">
+				<div class="col-lg-6 col-md-6 col-sm-6">
 					<div class="gamp-btn"><a href="createsi.html">Create Your Security Interest</a></div>
 				</div>
 				
